added cloudflare secrets

--- a/.github/workflows/deploy-to-portainer.yml
+++ b/.github/workflows/deploy-to-portainer.yml
@@ -133,7 +133,9 @@ jobs:
           
           RESPONSE=$(curl -s -w "\n%{http_code}" -X GET \
             "${{ secrets.portainer_url }}/api/stacks" \
-            -H "X-API-Key: ${{ secrets.portainer_token }}")
+            -H "X-API-Key: ${{ secrets.portainer_token }}" \
+            -H "CF-Access-Client-Id: ${{ secrets.CF_CLIENT_ID }}" \
+            -H "CF-Access-Client-Secret: ${{ secrets.CF_CLIENT_SECRET }}")
           
           HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
           BODY=$(echo "$RESPONSE" | sed '$d')
@@ -163,7 +165,9 @@ jobs:
           RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
             "${{ secrets.portainer_url }}/api/stacks/create/standalone/repository?endpointId=${{ secrets.portainer_endpoint_id }}" \
             -H "X-API-Key: ${{ secrets.portainer_token }}" \
-            -H "Content-Type: application/json" \
+            -H "Content-Type: application/json" \ \
+            -H "CF-Access-Client-Id: ${{ secrets.CF_CLIENT_ID }}" \
+            -H "CF-Access-Client-Secret: ${{ secrets.CF_CLIENT_SECRET }}" \
             -d "{
               \"name\": \"${{ steps.env.outputs.stack_name }}\",
               \"repositoryURL\": \"${{ github.server_url }}/${{ github.repository }}\",
@@ -193,7 +197,9 @@ jobs:
           RESPONSE=$(curl -s -w "\n%{http_code}" -X PUT \
             "${{ secrets.portainer_url }}/api/stacks/${{ steps.check-stack.outputs.stack_id }}/git/redeploy?endpointId=${{ secrets.portainer_endpoint_id }}" \
             -H "X-API-Key: ${{ secrets.portainer_token }}" \
-            -H "Content-Type: application/json" \
+            -H "Content-Type: application/json" \ \
+            -H "CF-Access-Client-Id: ${{ secrets.CF_CLIENT_ID }}" \
+            -H "CF-Access-Client-Secret: ${{ secrets.CF_CLIENT_SECRET }}" \
             -d "{
               \"repositoryReferenceName\": \"refs/heads/${{ steps.env.outputs.branch }}\",
               \"env\": ${{ steps.prepare-env.outputs.env_vars }},
@@ -233,7 +239,9 @@ jobs:
           # Get stack details
           curl -s -X GET \
             "${{ secrets.portainer_url }}/api/stacks" \
-            -H "X-API-Key: ${{ secrets.portainer_token }}" \
+            -H "X-API-Key: ${{ secrets.portainer_token }}" \ \
+            -H "CF-Access-Client-Id: ${{ secrets.CF_CLIENT_ID }}" \
+            -H "CF-Access-Client-Secret: ${{ secrets.CF_CLIENT_SECRET }}" \
             | jq '.[] | select(.Name=="${{ steps.env.outputs.stack_name }}") | {Name, Status, CreationDate, UpdateDate}'
 
       - name: Deployment result
