--- a/.github/workflows/deploy-to-portainer.yml
+++ b/.github/workflows/deploy-to-portainer.yml
@@ -53,6 +53,10 @@ on:
         required: true
         description: 'Cloudflare Client Secret'
 
+      github_secret:
+        required: true
+        description: 'Secret to bypass cloudflare bot protection'
+        
       env_vars_dev:
         required: false
         description: 'JSON array of environment variables for DEV'
@@ -141,6 +145,7 @@ jobs:
           
           RESPONSE=$(curl -s -w "\n%{http_code}" -X GET \
             "${{ secrets.portainer_url }}/api/stacks" \
+            -H "X-GitHub-Secret: ${{ secrets.github_secret }}" \
             -H "X-API-Key: ${{ secrets.portainer_token }}" \
             -H "CF-Access-Client-Id: ${{ secrets.cloudflare_client_id }}" \
             -H "CF-Access-Client-Secret: ${{ secrets.cloudflare_client_secret }}")
@@ -172,6 +177,7 @@ jobs:
           
           RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
             "${{ secrets.portainer_url }}/api/stacks/create/standalone/repository?endpointId=${{ secrets.portainer_endpoint_id }}" \
+            -H "X-GitHub-Secret: ${{ secrets.github_secret }}" \
             -H "X-API-Key: ${{ secrets.portainer_token }}" \
             -H "Content-Type: application/json" \ \
             -H "CF-Access-Client-Id: ${{ secrets.cloudflare_client_id }}" \
@@ -204,6 +210,7 @@ jobs:
           
           RESPONSE=$(curl -s -w "\n%{http_code}" -X PUT \
             "${{ secrets.portainer_url }}/api/stacks/${{ steps.check-stack.outputs.stack_id }}/git/redeploy?endpointId=${{ secrets.portainer_endpoint_id }}" \
+            -H "X-GitHub-Secret: ${{ secrets.github_secret }}" \
             -H "X-API-Key: ${{ secrets.portainer_token }}" \
             -H "Content-Type: application/json" \ \
             -H "CF-Access-Client-Id: ${{ secrets.cloudflare_client_id }}" \
@@ -247,6 +254,7 @@ jobs:
           # Get stack details
           curl -s -X GET \
             "${{ secrets.portainer_url }}/api/stacks" \
+            -H "X-GitHub-Secret: ${{ secrets.github_secret }}" \
             -H "X-API-Key: ${{ secrets.portainer_token }}" \ \
             -H "CF-Access-Client-Id: ${{ secrets.cloudflare_client_id }}" \
             -H "CF-Access-Client-Secret: ${{ secrets.cloudflare_client_secret }}" \
