--- a/.github/workflows/deploy-to-portainer.yml
+++ b/.github/workflows/deploy-to-portainer.yml
@@ -104,8 +104,8 @@ jobs:
           CF_ACCESS_CLIENT_SECRET: ${{ secrets.CF_CLIENT_SECRET }}
         run: |
           cloudflared access curl \
-            -H "X-API-Key: ${{ secrets.PORTAINER_API_KEY }}" \
-            https://portainer-dev.twentythree.ch/api/stacks
+            https://portainer-dev.twentythree.ch/api/stacks \
+            -H "X-API-Key: ${{ secrets.PORTAINER_API_KEY }}" 
 
       - name: Determine environment
         id: env
