--- a/.github/workflows/deploy-to-portainer.yml
+++ b/.github/workflows/deploy-to-portainer.yml
@@ -107,13 +107,13 @@ jobs:
 
       - name: Access Portainer via Cloudflare Access
         id: access-portainer-through-cloudflared
-        env:
-          CF_ACCESS_CLIENT_ID: ${{ secrets.cloudflare_client_id }}
-          CF_ACCESS_CLIENT_SECRET: ${{ secrets.cloudflare_client_secret }}
         run: |
+          export CF_ACCESS_CLIENT_ID="${{ secrets.cloudflare_client_id }}"
+          export CF_ACCESS_CLIENT_SECRET="${{ secrets.cloudflare_client_secret }}"
+          
           cloudflared access curl \
-            https://portainer-dev.twentythree.ch/api/stacks \
-            -H "X-API-Key: ${{ secrets.PORTAINER_API_KEY }}" 
+            -H "X-API-Key: ${{ secrets.PORTAINER_API_KEY }}" \
+            https://portainer-dev.twentythree.ch/api/stacks
 
       - name: Determine environment
         id: env
