--- a/.github/workflows/deploy-to-portainer.yml
+++ b/.github/workflows/deploy-to-portainer.yml
@@ -111,9 +111,9 @@ jobs:
           export CF_ACCESS_CLIENT_ID="${{ secrets.cloudflare_client_id }}"
           export CF_ACCESS_CLIENT_SECRET="${{ secrets.cloudflare_client_secret }}"
           
-          cloudflared access curl \
-            -H "X-API-Key: ${{ secrets.PORTAINER_API_KEY }}" \
-            https://portainer-dev.twentythree.ch/api/stacks
+          cloudflared access curl\
+            https://portainer-dev.twentythree.ch/api/stacks \
+            -H "X-API-Key: ${{ secrets.PORTAINER_API_KEY }}" 
 
       - name: Determine environment
         id: env
