--- a/.github/workflows/deploy-to-portainer.yml
+++ b/.github/workflows/deploy-to-portainer.yml
@@ -108,10 +108,9 @@ jobs:
       - name: Access Portainer via Cloudflare Access
         id: access-portainer-through-cloudflared
         run: |
-          export CF_ACCESS_CLIENT_ID="${{ secrets.cloudflare_client_id }}"
-          export CF_ACCESS_CLIENT_SECRET="${{ secrets.cloudflare_client_secret }}"
-          
-          cloudflared access curl\
+          CF_ACCESS_CLIENT_ID="${{ secrets.cloudflare_client_id }}"
+          CF_ACCESS_CLIENT_SECRET="${{ secrets.cloudflare_client_secret }}"
+          cloudflared access curl \
             https://portainer-dev.twentythree.ch/api/stacks \
             -H "X-API-Key: ${{ secrets.PORTAINER_API_KEY }}" 
 
