--- a/.github/workflows/deploy-to-portainer.yml
+++ b/.github/workflows/deploy-to-portainer.yml
@@ -124,7 +124,7 @@ jobs:
         env:
           CF_ACCESS_CLIENT_ID: ${{ secrets.cloudflare_client_id }}
           CF_ACCESS_CLIENT_SECRET: ${{ secrets.cloudflare_client_secret }}
-          PORTAINER_API_KEY: ${{ secrets.PORTAINER_API_KEY }}
+          PORTAINER_API_KEY: ${{ secrets.portainer_token }}
         run: |
           cloudflared access curl \
             https://portainer-api-dev.twentythree.ch/api/stacks \
