added network test

--- a/.github/workflows/deploy-to-portainer.yml
+++ b/.github/workflows/deploy-to-portainer.yml
@@ -114,25 +114,33 @@ jobs:
           setup-key: ${{ secrets.netbird_setup_key }}
           hostname: 'github-action-runner'
 
-      - name: Setup Cloudflare Tunnel
-        id: setup-cloudflared
-        run: |
-          wget -q https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64
-          chmod +x cloudflared-linux-amd64
-          sudo mv cloudflared-linux-amd64 /usr/local/bin/cloudflared
+      - name: Network test
+        id: network-test
+        run: | 
+          nslookup portainer.twentythree.ch
+          ping portainer.twentythree.ch
+          ping 192.168.11.2
+          tracert 192.168.11.2
 
-      - name: Access Portainer via Cloudflare Access
-        id: access-portainer-through-cloudflared
-        env:
-          CF_ACCESS_CLIENT_ID: ${{ secrets.cloudflare_client_id }}
-          CF_ACCESS_CLIENT_SECRET: ${{ secrets.cloudflare_client_secret }}
-          PORTAINER_API_KEY: ${{ secrets.portainer_token }}
-        run: |
-          cloudflared access curl \
-            https://portainer-api-dev.twentythree.ch/api/stacks \
-            --service-token-id "$CF_ACCESS_CLIENT_ID" \
-            --service-token-secret "$CF_ACCESS_CLIENT_SECRET" \
-            -H "X-API-Key: $PORTAINER_API_KEY"
+      # - name: Setup Cloudflare Tunnel
+      #   id: setup-cloudflared
+      #   run: |
+      #     wget -q https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64
+      #     chmod +x cloudflared-linux-amd64
+      #     sudo mv cloudflared-linux-amd64 /usr/local/bin/cloudflared
+
+      # - name: Access Portainer via Cloudflare Access
+      #   id: access-portainer-through-cloudflared
+      #   env:
+      #     CF_ACCESS_CLIENT_ID: ${{ secrets.cloudflare_client_id }}
+      #     CF_ACCESS_CLIENT_SECRET: ${{ secrets.cloudflare_client_secret }}
+      #     PORTAINER_API_KEY: ${{ secrets.portainer_token }}
+      #   run: |
+      #     cloudflared access curl \
+      #       https://portainer-api-dev.twentythree.ch/api/stacks \
+      #       --service-token-id "$CF_ACCESS_CLIENT_ID" \
+      #       --service-token-secret "$CF_ACCESS_CLIENT_SECRET" \
+      #       -H "X-API-Key: $PORTAINER_API_KEY"
 
       - name: Determine environment
         id: env
