--- a/.github/workflows/deploy-to-portainer.yml
+++ b/.github/workflows/deploy-to-portainer.yml
@@ -117,10 +117,19 @@ jobs:
       - name: Network test
         id: network-test
         run: | 
-          nslookup portainer.twentythree.ch || true
-          ping -c 4 portainer.twentythree.ch || true
-          ping -c 4 192.168.11.2 || true
-          traceroute 192.168.11.2 || true
+          echo "=== Running nslookup ==="
+          nslookup portainer.twentythree.ch || echo "nslookup failed with exit code $?"
+          
+          echo "=== Running ping to hostname ==="
+          ping -c 4 portainer.twentythree.ch || echo "ping to hostname failed with exit code $?"
+          
+          echo "=== Running ping to IP ==="
+          ping -c 4 192.168.11.2 || echo "ping to IP failed with exit code $?"
+          
+          echo "=== Running traceroute ==="
+          traceroute 192.168.11.2 || echo "traceroute failed with exit code $?"
+          
+          echo "=== Network test completed ==="
 
       # - name: Setup Cloudflare Tunnel
       #   id: setup-cloudflared
