--- a/.github/workflows/deploy-to-portainer.yml
+++ b/.github/workflows/deploy-to-portainer.yml
@@ -237,7 +237,7 @@ jobs:
             -H "Content-Type: application/json" \
             -d "{
               \"repositoryReferenceName\": \"refs/heads/${{ steps.env.outputs.branch }}\",
-              \"env\": ${{ steps.prepare-env.outputs.env_vars }},
+              \"env\": ${{ secrets.env_vars }},
               \"prune\": true,
               \"pullImage\": true
             }")
